[workspace]
members = [
    "crates/langgraph-core",
    "crates/langgraph-pregel",
    "crates/langgraph-checkpoint",
    "crates/langgraph-checkpoint-sqlite",
    "crates/langgraph-checkpoint-postgres",
    "crates/langgraph-prebuilt",
    "crates/langgraph-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
