[package]
name = "langgraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
langgraph-core = { path = "../langgraph-core" }
langgraph-pregel = { path = "../langgraph-pregel" }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "sync"] }
